testsuite/negative/Issue-0814-1.n
public interface I1[T1, T2] { }
public class X[T, Y] : I1[int, T], I1[Y, string] //E: 'X\..T, Y.' cannot implement both 'I1.int, T.' and 'I1.Y, string.' because they may unify for some type parameter substitutions
{
}